--- a/index.html
+++ b/index.html
@@ -8,6 +8,54 @@
         <link rel="stylesheet" type="text/css" href="styles/style.css">
     </head>
     <body>
+        <div class="container">
+            <div class="plain">
+                <p>Plaintext</p>
+                <input type="text" id ="plainTxt">
+            </div>
+            <div class="key">
+                <span>shift:</span>
+                <select name="shift" id="keys">
+                    <option value="0"> 0 </option>
+                    <option value="1"> 1 </option>
+                    <option value="2"> 2 </option>
+                    <option value="3"> 3 </option>
+                    <option value="4"> 4 </option>
+                    <option value="5"> 5 </option>
+                    <option value="6"> 6 </option>
+                    <option value="7"> 7 </option>
+                    <option value="8"> 8 </option>
+                    <option value="9"> 9 </option>
+                    <option value="10"> 10 </option>
+                    <option value="11"> 11 </option>
+                    <option value="12"> 12 </option>
+                    <option value="13"> 13 </option>
+                    <option value="14"> 14 </option>
+                    <option value="15"> 15 </option>
+                    <option value="16"> 16 </option>
+                    <option value="17"> 17 </option>
+                    <option value="18"> 18 </option>
+                    <option value="19"> 19 </option>
+                    <option value="20"> 20 </option>
+                    <option value="21"> 21 </option>
+                    <option value="22"> 22 </option>
+                    <option value="23"> 23 </option>
+                    <option value="24"> 24 </option>
+                    <option value="25"> 25 </option>
+                </select>
+            </div>
+            <div class="bttns">
+                <span>
+                    <button>&#8643; encrypt &#8642;</button>
+                    <button>&#8639; decrypt &#8638;</button>
+                </span>
+            </div>
+            <div class="cypherTxt">
+                <p>Ciphertext</p>
+                <input type="text" id ="ccTxt">
+            </div>
+
+        </div>        
         
         <!-- Scripts -->
         <script type="text/javascript" src="cypher.js"></script>
