--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,
             initial-scale=1.0">
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/
+        css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/
+        Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
         <title>Ceasar Cypher</title>
         <link rel="stylesheet" type="text/css" href="styles/style.css">
     </head>
@@ -11,11 +17,13 @@
         <div class="container">
             <div class="plain">
                 <p>Plaintext</p>
-                <input type="text" id ="plainTxt">
+                <input  type="text" class="pTxt" id ="plainTxt">
             </div>
-            <div class="key">
-                <span>shift:</span>
-                <select name="shift" id="keys">
+            <div class="buttons">
+                <span>Shift:</span>
+                <select class="form-select form-select-sm" 
+                aria-label=".form-select-sm example" id="keys">
+                    <option selected>Select your key here</option>
                     <option value="0"> 0 </option>
                     <option value="1"> 1 </option>
                     <option value="2"> 2 </option>
@@ -43,21 +51,28 @@
                     <option value="24"> 24 </option>
                     <option value="25"> 25 </option>
                 </select>
-            </div>
-            <div class="bttns">
                 <span>
-                    <button>&#8643; encrypt &#8642;</button>
-                    <button>&#8639; decrypt &#8638;</button>
+                    <button type="button" class="btn btn-success">
+                        &#8643; encrypt &#8642;
+                    </button>
+                    <button type="button" class="btn">
+                        &#8639; decrypt &#8638;
+                    </button>
                 </span>
             </div>
-            <div class="cypherTxt">
+            <div class="plain">
                 <p>Ciphertext</p>
-                <input type="text" id ="ccTxt">
+                <input  type="text" class="pTxt" id ="ccTxt">
             </div>
-
         </div>        
         
         <!-- Scripts -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd
+        /popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2
+        lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/
+        dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAF
+        LuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
         <script type="text/javascript" src="cypher.js"></script>
     </body>
 </html>
