--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
         <link rel="stylesheet" type="text/css" href="styles/style.css">
     </head>
     <body class="p-0 mx-auto d-flex flex-direction-column justify-content-center align-items-center vw-100 vh-100">    
-        <div class="mainBox">
+        <div class="mainBox p-3">
             <h4>Plain-text</h4>
-            <div class="boxes">                
+            <div class="boxes borderStyle">                
                 <div> 
-                    <input  type="text" class="inputBox" 
+                    <input  type="text" class="inputBox w-100" 
                     placeholder="Type text here to encrypt" id="pText">
                 </div>
                 <div> 
                     <p id="plainText" class="p-2"></p> 
                 </div>
             </div>
-            <div class="buttons m-1 mt-2 p-1">
+            <div class="buttonsBox borderStyle m-1 mt-2 p-1">
                 <span>Scroll to select your key</span>
                 <select id="keys" class="form-select mb-1 mt-1" size="2">
                     <!-- <option selected>Select your key here</option> -->
@@ -60,15 +60,15 @@
                     onclick="encode()">
                         &#8643; encrypt &#8642;
                     </button>
-                    <button type="button" class="btn btn-warning p-1 m-1"
+                    <button type="button" class="btn btn-warning p-1"
                     onclick="decode()">
                         &#8639; decrypt &#8638;
                     </button>
                 </span>
             </div>
             <h4>Cipher-text</h4>
-            <div class="boxes">                
-                <div> <input type="text" class="inputBox" 
+            <div class="boxes borderStyle">                
+                <div> <input type="text" class="inputBox w-100" 
                     placeholder="Type text here to decrypt" id ="cText"></div>
                 <div> 
                     <p id="cipheredText" class="p-2"></p> 
@@ -86,6 +86,6 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" 
         integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" 
         crossorigin="anonymous"></script>
-        <script type="text/javascript" src="cypher.js"></script>
+        <script type="text/javascript" src="cipher.js"></script>
     </body>
 </html>
